force-app/main/default/objects/SVMXC__SVMX_Jobs__c/SVMXC__SVMX_Jobs__c.object-meta.xml
<CustomObject>
    <description>This object tracks various jobs that are launched from ServiceMax such as the OptiMax dispatch optimization job.</description>
    <label>ServiceMax Job</label>
    <nameField>
        <displayFormat>SJ-{00000000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax Jobs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>