force-app/main/default/objects/SVMXC__SVMX_Jobs__c/fields/SVMXC__Scheduled_Resources__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Scheduled_Resources__c</fullName>
    <description>Number of technicians scheduled by the job</description>
    <label>Number Of Scheduled Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>