force-app/main/default/objects/SVMXC__SVMX_Jobs__c/fields/SVMXC__Scheduled_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Scheduled_Work_Orders__c</fullName>
    <description>Number of work orders scheduled by the job</description>
    <label>Number Of Scheduled Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>