force-app/main/default/objects/SVMXC__SVMX_Jobs__c/fields/SVMXC__Sent_Events_Count__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Sent_Events_Count__c</fullName>
    <label>Number Of Sent Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>