force-app/main/default/objects/SVMXC__SVMX_Jobs__c/fields/SVMXC__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Time__c</fullName>
    <description>Time when job started</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>