force-app/main/default/objects/SVMXC__SVMX_Jobs__c/fields/SVMXC__Total_Driving_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Total_Driving_Time__c</fullName>
    <description>Total driving time for all resources scheduled by the job</description>
    <label>Total Driving Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>